--- a/Client/Dt.Sample/Styles/TestDemo1.xaml
+++ b/Client/Dt.Sample/Styles/TestDemo1.xaml
@@ -7,5 +7,8 @@
     mc:Ignorable="d"
     xmlns:a="using:Dt.Base">
 
-    
+    <StackPanel>
+        <a:FileTransfer x:Name="_tran" />
+        <Button Content="Test" Click="Button_Click"/>
+    </StackPanel>
 </a:PageWin>
