客户端增加DataAccess，修改sysmodule, sysmenu

--- a/Client/Dt.Sample/DataAccess/SerializeDemo.xaml
+++ b/Client/Dt.Sample/DataAccess/SerializeDemo.xaml
@@ -75,6 +75,14 @@
             <Button Content="发送Table" Click="SetTable" />
         </StackPanel>
         <StackPanel Orientation="Horizontal">
+            <Button Content="返回Row" Click="GetRow" />
+            <Button Content="发送Row" Click="SetRow" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <Button Content="返回EntityRow的Table" Click="GetEntityRowTable" />
+            <Button Content="返回EntityRow" Click="GetEntityRow" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
             <Button Content="返多表Dict" Click="GetTableDict" />
             <Button Content="发多表Dict" Click="SetTableDict" />
         </StackPanel>
