--- a/Client/Dt.App/Model/BaseCode.xaml
+++ b/Client/Dt.App/Model/BaseCode.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Dt.App.Model.SysPrivilege"
+    x:Class="Dt.App.Model.BaseCode"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
