--- a/Client/Dt.App/Model/User/EditUserDlg.xaml
+++ b/Client/Dt.App/Model/User/EditUserDlg.xaml
@@ -1,15 +1,22 @@
 ﻿<a:Dlg
-    x:Class="Dt.App.Model.UserGrpDlg"
+    x:Class="Dt.App.Model.EditUserDlg"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="选择角色">
+    Title="编辑用户">
 
     <a:Dlg.Menu>
         <a:Menu>
-            <a:Mi ID="确定" Icon="保存" Click="OnOK" />
+            <a:Mi ID="保存" Icon="保存" ShowInPhone="Icon" IsEnabled="{Binding IsDirty,ElementName=_fv}" Click="OnSave" />
+            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
         </a:Menu>
     </a:Dlg.Menu>
 
-    
+    <a:Fv x:Name="_fv">
+        <a:CText ID="name" Title="姓名" />
+        <a:CText ID="phone" Title="手机号" />
+        <a:CBool ID="sex" Title="性别男" />
+        <a:CDate ID="ctime" Title="创建时间" IsReadOnly="True" />
+        <a:CDate ID="mtime" Title="修改时间" IsReadOnly="True" />
+    </a:Fv>
 </a:Dlg>
