--- a/Client/Dt.App/Model/User/UserAccount.xaml
+++ b/Client/Dt.App/Model/User/UserAccount.xaml
@@ -17,7 +17,7 @@
             <a:Tab Title="用户列表">
                 <a:Tab.Menu>
                     <a:Menu>
-                        <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" />
+                        <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAddUser" />
                     </a:Menu>
                 </a:Tab.Menu>
                 <a:Tab.PhoneBar>
@@ -26,12 +26,12 @@
                 <a:Lv x:Name="_lvUser" ViewMode="Table">
                     <a:Ex.Menu>
                         <a:Menu>
-                            <a:Mi ID="编辑" Icon="铅笔" />
+                            <a:Mi ID="编辑" Icon="铅笔" Click="OnEditUser" />
                             <a:Mi ID="查看权限" Icon="审核" />
                             <a:Mi ID="可访问菜单" Icon="大图标" />
-                            <a:Mi ID="重置密码" Icon="钥匙" />
-                            <a:Mi ID="停用/启用" Icon="禁止登记" />
-                            <a:Mi ID="删除" Icon="删除" />
+                            <a:Mi ID="重置密码" Icon="钥匙" Click="OnResetPwd" />
+                            <a:Mi ID="停用/启用" Icon="禁止登记" Click="OnToggleExpired" />
+                            <a:Mi ID="删除" Icon="删除" Click="OnDelUser" />
                         </a:Menu>
                     </a:Ex.Menu>
                     <a:Cols>
