--- a/Client/Bs.Kehu/Home/MainPage.xaml
+++ b/Client/Bs.Kehu/Home/MainPage.xaml
@@ -64,7 +64,7 @@
 
             <Grid BorderBrush="{StaticResource 浅灰边框}" BorderThickness="0,0,0,1" Grid.Row="1">
                 <TextBlock Text="我的康养计划" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                <Button Content="&#xE080;" Style="{StaticResource 字符按钮}" HorizontalAlignment="Right" />
+                <Button Content="&#xE080;" Click="OnAddPlan" Style="{StaticResource 字符按钮}" HorizontalAlignment="Right" />
             </Grid>
 
             <Button HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" Grid.Row="2">
