--- a/Client/Dt.Sample/Charts/BaseChart.xaml
+++ b/Client/Dt.Sample/Charts/BaseChart.xaml
@@ -26,6 +26,22 @@
                         <a:CList ID="Theme" Title="主题样式" />
                         <a:CList ID="Palette" Title="调色板" />
                         <a:CText ID="Header" Title="大标题" />
+                        <a:CBool ID="View.Inverted" Title="转换XY轴" />
+
+                        <a:CBar Title="X轴设置" />
+                        <a:CText ID="View.AxisX.Title" Title="标题" />
+
+                        <a:CBar Title="Y轴设置" />
+                        <a:CText ID="View.AxisY.Title" Title="标题" />
+                        <a:CText ID="View.AxisY.MajorUnit" Title="坐标轴单位" />
+                    </a:Fv>
+                    <a:Fv Data="{Binding ElementName=_legend}">
+                        <a:CBar Title="图例设置" />
+                        <a:CText ID="Title" Title="标题" />
+                        <a:CList ID="Position" Title="图例位置" />
+                        <a:CList ID="Orientation" Title="布局方向" />
+                        <a:CBool ID="OverlapChart" Title="重叠方式" />
+                        <Button Content="保存截图" Click="OnSnapshot" />
                     </a:Fv>
                 </StackPanel>
             </a:Tab>
